uploaded all drawable assets finished info page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">trek traveler</string>
+    <string name="walkscore_data"><u>Walkscore Data</u></string>
 </resources>
