--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">trek traveler</string>
-    <string name="walkscore_data"><u>Walkscore Data</u></string>
+    <string name="walkscore_data">Walkscore Data</string>
     <string name="see_more"><u>See More</u></string>
 
 </resources>
