places buttons working app name change app icon setup Bus stop instead of vicinity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">trek traveler</string>
+    <string name="app_name">Green TrekTraveler</string>
     <string name="walkscore_data">Walkscore Data</string>
     <string name="see_more"><u>See More</u></string>
 
