Adding featured neighborhoods feature

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,5 +2,6 @@
     <string name="app_name">Green TrekTraveler</string>
     <string name="walkscore_data">Walkscore Data</string>
     <string name="see_more"><u>See More</u></string>
+    <string name="downtown">Known for its walkability and vibrant nightlife, Downtown is perfect for single travelers who enjoy art galleries, restaurants, and cultural events. The Sun Link streetcar makes it easy to travel between key areas without a car.</string>
 
 </resources>
